WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269087
`FindStringIncludingImages()` message should not be sent when the feature isn’t enabled
https://bugs.webkit.org/show_bug.cgi?id=269087
Summary
`FindStringIncludingImages()` message should not be sent when the feature isn...
Charlie Wolfe
Reported
2024-02-09 12:33:43 PST
Sending the IPC message without the feature enabled was causing the completion handler to never be called.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-09 12:34:02 PST
<
rdar://problem/122662406
>
Charlie Wolfe
Comment 2
2024-02-09 12:34:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24163
EWS
Comment 3
2024-02-09 12:53:30 PST
Committed
274381@main
(e6cfe8ece4c2): <
https://commits.webkit.org/274381@main
> Reviewed commits have been landed. Closing PR #24163 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug