`FindStringIncludingImages()` message should not be sent when the feature isn’t enabled https://bugs.webkit.org/show_bug.cgi?id=269087 rdar://122662406

Reviewed by Pascoe.

Sending the IPC message without the feature enabled was causing the completion handler to never be called.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::findString):

Canonical link: https://commits.webkit.org/274381@main